style.css
* {
margin: 0;
padding: 0;
box-sizing: border-box;
background-color: #efeaea;
font-weight: normal;
font-family: 'Oswald', sans-serif;
}

body {
  width: 100%;
}

header {
   background-color: black;
   height: 70px;
   width: 100%;
   position: fixed;
 }

 header ul{
   font-size: 13px;
   display:block;
   background-color:black;
   color:white;
   text-align:center;
 }
 .left {
   float: left;
   background-color:black;
   font-family: 'Cedarville Cursive', cursive;
   font-size: 35px;

 }
 .right{
   float: right;
   text-align: center;

 }
 header em {
   font-style: italic;
 }
 header strong {
   font-weight: bold;
 }
 header li{
    display:inline-block;
    padding:3px 10px;
    /*min-width:50px;*/
    background-color: black;
    vertical-align:middle;
 }

nav {
  display: inline;
  margin-left: 10%;
  margin-bottom: 2em;
  color: #fff;
  width: 100%;
}


nav li{
  font-family: 'Cedarville Cursive', cursive;
  display: inline;
  line-height: 65px;
  margin-left: 13%;


}

nav a {
  display: inline;
  font-family: 'Cedarville Cursive', cursive;
  text-align: center;
  background-color: #000;
  color: #fff;
  font-size: 30px;
  text-decoration: none;
  padding: 8px;
  -o-transition:.5s;
  -ms-transition:.5s;
  -moz-transition:.5s;
  -webkit-transition:.5s;
  /* ...and now for the proper property */
  transition:.5s;

}

nav a:hover {
  color: #ef75a4;
  background-color: white;
  border-radius: 50%;
}
h1 {
  /*font-family: 'Julius Sans One', sans-serif;*/
  text-align: center;
  margin-bottom: 1em;
  background-color: #000;
  color: #fff;
  float: left;
  height: 2em;

}

h2 {
  font-family: 'Cedarville Cursive', cursive;
  margin-bottom: 10px;
  margin-left: auto;
  margin-right: auto;
  text-align: center;
  width: 200px;
  height: 2em;
  padding-top: .25em;
  border-radius: 50%;
  font-size: 30px;
  opacity: .5;
    transition: opacity .5s ease-out;
    -moz-transition: opacity .5s ease-out;
    -webkit-transition: opacity .5s ease-out;
    -o-transition: opacity .5s ease-out;
  /*background-color: #f9f7f7;*/
}

h2:hover {
  background-color: #eaafb7;
  opacity: 1;
}

h3 {

  font-size: 25px;
  margin-bottom: 10px;
}

h3:hover{

}



#profile-photo img{

  border-radius: 50%;
  width: 300px;
  height: 300px;

  opacity: .8;
    transition: opacity .5s ease-out;
    -moz-transition: opacity .5s ease-out;
    -webkit-transition: opacity .5s ease-out;
    -o-transition: opacity .5s ease-out;


}

#profile-photo img:hover {
  transform: scale(1.1);
  opacity: 1;


}



#description p{
  /*margin-bottom: 20px;*/
  margin-left: 30px;
}

.bio {
  padding-top: 120px;

  width: 800px;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 50px;

  text-align: center;
}

.bio li {
  width: 40%;
  display: inline-block;
  margin-left: auto;
  margin-right: auto;
  margin-left: 30px;
}

.divider {
  border-bottom: 1.5px solid black;
  border-top: 1.5px solid black;
  margin-bottom: 10px;
}

.personal-photo-container {
  width: 800px;
  margin-left: auto;
  margin-right: auto;
  display: block;

  }
.personal-photo-container ul{
  list-style-type:none;
  display: block;
  float: right;
  margin-left: 30px;
}

.personal-photo-container li {
  margin-left: auto;
  margin-right: auto;
  display: inline-block;
  padding-right: 63px;
}

.personal-photo-container img {
  border-radius: 50%;
  width: 200px;
  height: 200px;
  margin-bottom: 1em;
  margin-top: 2em;
  opacity: .5;
    transition: opacity .5s ease-out;
    -moz-transition: opacity .5s ease-out;
    -webkit-transition: opacity .5s ease-out;
    -o-transition: opacity .5s ease-out;

}

.personal-photo-container img:hover {

    transform: scale(1.1);
    opacity: 1;
  }

}

.personal-photo-container p {

  margin-bottom: 2em;
  text-align: center;
  margin-left: 40px;
}



.recent-projects {
  text-align: center;
  display: block;
  width: 800px;
  margin: 0 auto;
  padding-top: 75px;
  padding-bottom: 50px;
}


.recent-projects ul {
  list-style-type:none;
  margin-top: 35px;
}
.recent-projects a {
  color: #000;
  text-decoration: none;
  -o-transition:.5s;
  -ms-transition:.5s;
  -moz-transition:.5s;
  -webkit-transition:.5s;

  transition: opacity .5s ease-out;
}

.recent-projects a:hover {
  font-weight: bold;
  opacity: .8;


}

.recent-projects li {
  margin-bottom: 2em;
}


.recent-projects p:nth-child(2) {
  border-radius: 10px;
  background-color: #f9f7f7;
  border-bottom: 1px solid #333131;
  border-right: 1px solid #333131;
}

.recent-projects img {
  width: 600px;
  border-radius: 20px;
  opacity: .5;
    transition: opacity .5s ease-out;
    -moz-transition: opacity .5s ease-out;
    -webkit-transition: opacity .5s ease-out;
    -o-transition: opacity .5s ease-out;
}

.recent-projects img:hover {
  opacity: 1;
}

.contact-info {
  text-align: center;
  margin: 0 auto;
  width: 800px;
  margin-bottom: 15em;
}
.contact-info li {

  margin-left: 1em;
  text-align: center;
  display: inline-block;
  padding: 10px;
  margin-bottom: 2em;
  /*background-color: #333131;
  color: #fff;*/
  width: 40%;

  border-radius: 10px;
  border: 2px solid black;

}

.contact-info li:hover {
  background-color: #eaafb7;
}


.contact-info a:link{
  /*font-family: 'Cedarville Cursive', cursive;*/
  text-align: center;
  font-size: 20px;
  text-decoration: none;
  color: #000;
  /*background-color: #333131;
  color: #fff;*/
  width: 20%;
  future-proofing purposes I guess. */
-o-transition:.5s;
-ms-transition:.5s;
-moz-transition:.5s;
-webkit-transition:.5s;
/* ...and now for the proper property */
transition:.5s;
border-radius: 50%;

}

.contact-info a:hover {
font-style: italic;
background-color: #eaafb7;

}

